Revamped game engine